fix stretched profile pic, add headshot

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -9,19 +9,18 @@
 	color: #fff;
 }
 
-/*#mypic {
-	background-image: url('/img/boat_pic.jpg');
+#mypic-sidebar {
+	background-image: url('/img/profile.jpg');
 	background-size: cover;
 	background-position: 50%;
 	height: 100%;
 	max-height: 100%;
-	max-width: 50%;
-	color: #fff;
-	margin: none;
-	padding: none;
-}*/
+	max-width: 40%;
+	margin: 0px;
+	padding: 0px;
+}
 
-#mypic {
+/*#mypic-wrapper {
 	height: 100%;
 	max-height: 100%;
 	max-width: 40%;
@@ -29,15 +28,27 @@
 	margin: none;
 	padding: none;
 	overflow: hidden;
-}
+}*/
+
+/*#mypic {
+	height: 100%;
+	max-height: 100%;
+	max-width: 40%;
+	color: #fff;
+	margin: none;
+	padding: none;
+	overflow: hidden;
+}*/
 
 #summary {
 	float:right;
 }
 
 #summary-text {
-	float: right;
+	text-align: center;
 	margin-top: 150px;
+	margin-left: 25px;
+	margin-right: 25px;
 }
 
 .top-bar {
